--- a/platformio.ini
+++ b/platformio.ini
@@ -9,20 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:lolin_c3_mini]
-;platform = 	https://github.com/platformio/platform-espressif32.git
-;platform_packages = 	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-
 platform = espressif32
 board = lolin_c3_mini
 framework = arduino
-
 lib_deps = 
-  NimBLE-Arduino
-
+	NimBLE-Arduino
+	t-vk/ESP32 BLE Keyboard@^0.3.2
 build_flags = 
-    ${env.build_flags}
-    -DUSE_NIMBLE
-    -DARDUINO_USB_MODE=1
-    -DARDUINO_USB_CDC_ON_BOOT=1
-
+	${env.build_flags}
+	-DUSE_NIMBLE
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
 monitor_speed = 115200
