--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,11 @@ platform = espressif32
 board = lolin_c3_mini
 framework = arduino
 lib_deps = 
-	NimBLE-Arduino
+	NimBLE-Arduino@1.4.3
 	t-vk/ESP32 BLE Keyboard@^0.3.2
 build_flags = 
 	${env.build_flags}
-	-DUSE_NIMBLE
+	-DUSE_NIMBLE=1
 	-DARDUINO_USB_MODE=1
 	-DARDUINO_USB_CDC_ON_BOOT=1
 monitor_speed = 115200
